--- a/react_sanity/package.json
+++ b/react_sanity/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@sanity/client": "^4.0.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.4.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
